<resources>
    <string name="app_name">Bolesym</string>
    <string name="local_2LikeAiixn">Make Sweet Story With Couple Avatar</string>
    <string name="coolboyFragment">Cartoon</string>
    <string name="saturationRelativeHandsome">Classy</string>
    <string name="listenerLocal_gAttrs">Youth</string>
    <string name="bitmapShapeSticker">Cool</string>
    <string name="attrsBaseListener">Lively</string>
    <string name="homeLikeArrow">Choose Avatar</string>
    <string name="testModityRecord">All Categories</string>
    <string name="categoriesApplication">Set up</string>
    <string name="colorsActivityGlide">Sure</string>
    <string name="dianSaturationCategories">SAVE</string>
    <string name="baseCallback">Couple Avatar</string>
    <string name="delete_gAndroid">Sporty</string>
    <string name="testLayoutRounded">handsome</string>
    <string name="modityAvatarLauncher">Cool Boy</string>
    <string name="attrsCoupleNosel">Young Boy</string>
    <string name="setupExampleColors">Generate Couple Avatars</string>
    <string name="exampleShape">Feedback</string>
    <string name="bitmapExtractionHandsome">Privacy Policy</string>
    <string name="extractionDelete_e">Filter_01</string>
    <string name="backupHuakuai">Filter_02</string>

    <string name="delete__Linear">Sticker_01</string>
    <string name="unitUnit">Sticker_02</string>
    <string name="baseCoolboy">Download</string>
    <string name="mainBuild">Reselect</string>
</resources>