<?xml version="1.0" encoding="utf-8"?>
<com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="343dp"
    app:s_top_right_radius="20dp"
    app:s_top_left_radius="20dp"
    app:s_solid_gradient_center_color="@color/white"
    app:s_solid_gradient_start_color="@color/white"
    app:s_solid_gradient_end_color="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@mipmap/pop_delete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:orientation="horizontal">

        <com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout
            android:id="@+id/ll_cartoon"
            android:layout_width="147dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"

            android:orientation="horizontal"
            app:s_corner_radius="23dp"

            app:s_solid_gradient_center_color="#252525"
            app:s_solid_gradient_end_color="#252525"
            app:s_solid_gradient_start_color="#252525"
            app:s_stroke_width="1dp">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:src="@mipmap/k1_h_d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/coolboyFragment"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout>

        <com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout
            android:id="@+id/ll_classy"
            android:layout_width="147dp"
            android:layout_height="46dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:s_corner_radius="23dp"
            app:s_solid_gradient_center_color="#252525"
            app:s_solid_gradient_end_color="#252525"
            app:s_solid_gradient_start_color="#252525"
            app:s_stroke_width="1dp">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="3dp"
                android:src="@mipmap/qz1_h" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/saturationRelativeHandsome"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout
            android:id="@+id/ll_youth"
            android:layout_width="147dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:orientation="horizontal"
            app:s_corner_radius="23dp"
            app:s_solid_gradient_center_color="#252525"
            app:s_solid_gradient_end_color="#252525"
            app:s_solid_gradient_start_color="#252525"
            app:s_stroke_width="1dp">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:src="@mipmap/nq1_h" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/listenerLocal_gAttrs"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout>

        <com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout
            android:id="@+id/ll_cool"
            android:layout_width="147dp"
            android:layout_height="46dp"
            android:layout_marginStart="40dp"

            android:orientation="horizontal"
            app:s_corner_radius="23dp"
            app:s_solid_gradient_center_color="#252525"
            app:s_solid_gradient_end_color="#252525"
            app:s_solid_gradient_start_color="#252525"
            app:s_stroke_width="1dp">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:src="@mipmap/c1_h" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/bitmapShapeSticker"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout>
    </LinearLayout>

    <com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout
        android:id="@+id/ll_lively"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"

        android:orientation="horizontal"
        app:s_corner_radius="23dp"
        app:s_solid_gradient_center_color="#252525"
        app:s_solid_gradient_end_color="#252525"
        app:s_solid_gradient_start_color="#252525"
        app:s_stroke_width="1dp">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:src="@mipmap/h1_h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/attrsBaseListener"

            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout>

</com.peluac.vataret.ucatale.ui.view.SShapeLinearLayout>