<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C0707"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="28dp"
            android:src="@mipmap/arrow_left" />
<View
android:paddingLeft="14dp"
android:layout_height="0dp"
android:background="#B2B556"
android:visibility="gone"
android:layout_width="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="26dp"
            android:text="@string/categoriesApplication"
            android:textColor="@color/white"
            android:textSize="16dp" />
<ScrollView
android:paddingBottom="54dp"
android:orientation="horizontal"
android:layout_width="wrap_content"
android:visibility="gone"
android:background="#477B94"
android:layout_height="54dp">
</ScrollView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="88dp"
        android:src="@mipmap/ic_launcher1" />
<TextView
android:background="#5F84E4"
android:textSize="30sp"
android:paddingBottom="72dp"
android:gravity="center_vertical"
android:layout_height="0dp"
android:layout_width="0dp"
android:visibility="visible"
android:lines="8"
android:textColor="#349E76"/>

    <com.peluac.vataret.ucatale.view.SShapeFrameLayout
        android:id="@+id/fl_feedback"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        app:s_corner_radius="32dp"
        app:s_solid_gradient_center_color="#592626"
        app:s_solid_gradient_end_color="#592626"
        app:s_solid_gradient_start_color="#592626">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exampleShape"
            android:textColor="@color/white"
            android:textSize="16dp" />
<ScrollView
android:layout_height="0dp"
android:orientation="horizontal"
android:layout_width="0dp"
android:padding="24dp">
<LinearLayout
android:orientation="horizontal"
android:paddingLeft="52dp"
android:layout_height="0dp"
android:visibility="gone"
android:background="#6A49DE"
android:layout_width="0dp">
<LinearLayout
android:background="#FE2D09"
android:orientation="vertical"
android:layout_width="0dp"
android:layout_height="0dp">
<TextView
android:paddingBottom="83dp"
android:text="sendtoFopen"
android:textColor="#770EB0"
android:gravity="right"
android:background="#1625BA"
android:layout_height="0dp"
android:visibility="gone"
android:layout_marginRight="64dp"
android:layout_width="0dp"/>
</LinearLayout>
<EditText
android:background="#B00AC7"
android:layout_width="0dp"
android:hint="delimitedMidsSignaling"
android:gravity="right"
android:text="fftgDatadirFrag"
android:textColor="#DA0A14"
android:layout_height="0dp"
android:textSize="32sp"
android:lines="1"/>
<LinearLayout
android:background="#3FC14E"
android:paddingTop="57dp"
android:orientation="horizontal"
android:layout_height="0dp"
android:layout_width="0dp">
<EditText
android:visibility="gone"
android:text="bloomLock"
android:textSize="16sp"
android:layout_margin="87dp"
android:textColor="#28E39D"
android:background="#95A75A"
android:paddingLeft="88dp"
android:layout_width="0dp"
android:gravity="top"
android:layout_height="0dp"
android:hint="ownAdditionHexbn"/>
<View
android:layout_width="0dp"
android:paddingBottom="22dp"
android:visibility="invisible"
android:background="#E30B4F"
android:layout_height="0dp"/>
<ImageView
android:layout_marginLeft="51dp"
android:layout_width="0dp"
android:paddingTop="53dp"
android:layout_height="0dp"/>
<LinearLayout
android:layout_width="84dp"
android:visibility="gone"
android:paddingLeft="69dp"
android:layout_height="wrap_content"
android:orientation="horizontal">
</LinearLayout>
<View
android:layout_marginBottom="80dp"
android:layout_height="0dp"
android:layout_width="0dp"
android:paddingBottom="44dp"
android:background="#F2882B"
android:visibility="visible"/>
<TextView
android:textColor="#D255BF"
android:visibility="visible"
android:layout_marginLeft="99dp"
android:text="blendmodePie"
android:background="#92A60A"
android:layout_width="0dp"
android:layout_height="0dp"/>
<EditText
android:hint="revisionHwmap"
android:lines="4"
android:layout_height="0dp"
android:text="vencInsertionDimensions"
android:layout_marginRight="94dp"
android:layout_width="0dp"
android:gravity="center_horizontal"
android:paddingRight="1dp"/>
<ScrollView
android:background="#99B92E"
android:visibility="gone"
android:orientation="horizontal"
android:layout_width="252dp"
android:layout_height="181dp">
<LinearLayout
android:visibility="visible"
android:paddingTop="43dp"
android:layout_height="0dp"
android:orientation="vertical"
android:background="#15D05C"
android:layout_width="0dp">
<EditText
android:layout_width="0dp"
android:hint="stressRecognized"
android:layout_height="0dp"
android:layout_marginTop="58dp"
android:visibility="gone"
android:textColor="#7C406E"
android:lines="1"
android:textSize="15sp"
android:paddingLeft="45dp"
android:background="#39673A"
android:gravity="center_horizontal"
android:text="underlyingEdit"/>
<ImageView
android:layout_height="0dp"
android:layout_width="0dp"
android:background="#C91D6C"
android:visibility="visible"
android:layout_marginRight="4dp"/>
<EditText
android:text="qualifiersSections"
android:background="#A66FDA"
android:hint="duplexEscapesLabelns"
android:visibility="gone"
android:layout_marginLeft="30dp"
android:layout_width="0dp"
android:lines="6"
android:gravity="center_horizontal"
android:layout_height="0dp"/>
<EditText
android:layout_width="0dp"
android:hint="altivecNtro"
android:layout_height="0dp"
android:layout_marginLeft="85dp"
android:textColor="#763746"
android:textSize="31sp"/>
<View
android:background="#63E9CF"
android:layout_marginLeft="36dp"
android:paddingLeft="33dp"
android:visibility="gone"
android:layout_width="0dp"
android:layout_height="0dp"/>
<View
android:layout_marginTop="90dp"
android:layout_width="0dp"
android:layout_height="0dp"
android:paddingLeft="36dp"
android:background="#BC4BA0"
android:visibility="visible"/>
</LinearLayout>
</ScrollView>
<EditText
android:hint="sunsetSupportedEcho"
android:visibility="visible"
android:text="implicitelyFadst"
android:layout_height="0dp"
android:lines="2"
android:textSize="30sp"
android:paddingTop="78dp"
android:background="#18CF04"
android:layout_marginBottom="71dp"
android:layout_width="0dp"
android:textColor="#DC8ED9"/>
<ImageView
android:visibility="invisible"
android:layout_width="0dp"
android:padding="63dp"
android:layout_marginLeft="29dp"
android:layout_height="0dp"
android:background="#6D6362"/>
</LinearLayout>
<View
android:visibility="visible"
android:layout_margin="59dp"
android:layout_width="0dp"
android:layout_height="0dp"
android:paddingBottom="66dp"
android:background="#4E1918"/>
</LinearLayout>
</ScrollView>
    </com.peluac.vataret.ucatale.view.SShapeFrameLayout>

    <com.peluac.vataret.ucatale.view.SShapeFrameLayout
        android:id="@+id/fl_termof"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:s_corner_radius="32dp"
        app:s_solid_gradient_center_color="#592626"
        app:s_solid_gradient_end_color="#592626"
        app:s_solid_gradient_start_color="#592626">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bitmapExtractionHandsome"
            android:textColor="@color/white"
            android:textSize="16dp" />
<View
android:background="#DEC8F3"
android:layout_width="0dp"
android:layout_height="0dp"
android:visibility="gone"/>
    </com.peluac.vataret.ucatale.view.SShapeFrameLayout>
</LinearLayout>